# fake-file

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  w1_d0_s1024
.github/workflows/: bench.yml  coverage.yml  release.yml  tests_and_checks.yml
benches/: balanced.rs  structure.rs
src/: cli.rs  lib.rs  main.rs  utils.rs
src/utils/: fs_utils.rs  mod.rs
tests/: balanced.rs  structure.rs
w1_d1_s1024/: 0
w1_d4_s1024/0/0/0/: 0
w2_d1_s1024/: 0  1
w2_d2_s1024/0/: 0  1
w2_d2_s1024/1/: 0  1
w4_d1_s1024/: 0  1  2  3
