[package]
name = "fake-file"
version = "0.1.0"
description = "A fake file generator"
keywords = []
categories = []

include = ["/src", "/benches", "README.md", "LICENSE"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/fake-file"
repository = "https://github.com/banyancomputer/fake-file"
authors = ["amiller68 <alexanderscottmiller@gmail.com>"]

[lib]
path = "src/lib.rs"
bench = false
doctest = true

[[bin]]
name = "fake-file"
path = "src/main.rs"
doc = false
bench = false

[[bench]]
name = "structure"
harness = false

[dependencies]
anyhow = "1.0"
proptest = { version = "1.1", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8.4"
serde ={version= "1.0.155", features = ["derive"]}
clap = { version = "4.0.32", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
criterion = "0.4"
lazy_static = "1.4"
proptest = "1.1"
fs_extra = "1.3.0"

[features]
default = []

[metadata.docs.rs]
all-features = true
## defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
#
# See https://doc.rust-lang.org/cargo/reference/profiles.html for more info.
#[profile.release]
# Do not perform backtrace for panic on release builds.
#panic = 'abort'
# Perform optimizations on all codegen units.
## codegen-units = 1
# Tell `rustc` to optimize for small code size.
## opt-level = "s" # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
## lto = true
# Amount of debug information.
# 0/false: no debug info at all; 1: line tables only; 2/true: full debug info
## debug = false
# Strip debug symbols
## strip = "symbols"

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
